issues with buttons in register.js page fixed, now properly redirect. Login page button adjusted to be more finger friendly on mobile devices

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,11 +1,9 @@
 .login-page {
-
-  
   &__input-wrapper, form {
     height: 50vh;
     display: grid;
     grid-template-columns: 10vw [input-field-s] 80vw [input-field-e] 20vw ;
-    grid-template-rows: [username-label-s] 5vh [username-label-e username-input-s] 5vh [username-input-e] 10vh [password-label-s] 5vh [password-label-e password-input-s] 5vh [password-input-e]
+    grid-template-rows: [username-label-s] 5vh [username-label-e username-input-s] 5vh [username-input-e] 10vh [password-label-s] 5vh [password-label-e password-input-s] 5vh [password-input-e spacer-s] 5vh [spacer-e login-button-s] 5vh [login-button-e];
   }
 
   &__username-label {
@@ -28,6 +26,23 @@
     height: 5vh;
     grid-column: input-field-s/input-field-e;
     grid-row: password-input-s/password-input-e;
+  }
+
+  &__login-button {
+    grid-column: input-field-s/input-field-e;
+    grid-row: login-button-s/login-button-e;
+    height: 15vh;
+    width: 65vw;
+    justify-self: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: green;
+    color: white;
+    border-radius: 20px;
+    font-family: 'Edu TAS Beginner', cursive;
+    font-size: 48px;
+    text-decoration: none;
   }
 
   input {
