--- a/src/styles/smallerGreenButton.scss
+++ b/src/styles/smallerGreenButton.scss
@@ -12,10 +12,12 @@
   font-family: 'Edu TAS Beginner', cursive;
   font-size: 24px;
   text-decoration: none;
+  transition: 0.3s;
 }
 
 button, button:active, button:focus {
   border: none;
   border-style: outset;
   outline: none;
+  background-color: darkgreen;
 }
